[package]
name = "ferrous-chloride"
version = "0.1.0"
authors = ["Yong Wen Chua <lawliet89@users.noreply.github.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
failure = { version = "0.1.5", features=["backtrace"] }
failure_derive = "0.1.5"
itertools = "0.8.0"
log = "0.4"
nom = { version = "^4.2.3", features = ["verbose-errors"] }
serde = { version = "1.0", optional = true }
take_mut = "0.2.2"
unic-ucd-ident = { version = "0.9.0", features = ["id"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.10.5"

[build-dependencies]
yansi = "0.5"
version_check = "0.1.3"

[features]
default = ["serde"]

[package.metadata.docs.rs]
all-features = true
